subclasses of path and bpath not as subsection but as section
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@364 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/bpath.tex
+++ b/manual/bpath.tex
@@ -112,7 +112,7 @@ other methods available for \verb|bpath|s.
 \medskip
 
 
-\subsection{Subclasses of path}
+\section{Subclasses of path}
 
 For your convenience, some special paths are already defined, which
 are given in the following table.
