--- a/manual/path.tex
+++ b/manual/path.tex
@@ -92,7 +92,7 @@ apply the more sophisticated methods, that are only available for
 B\'ezier paths, like transformations, intersection, dissections, etc.
 
 
-\subsection{Subclasses of path}
+\section{Subclasses of path}
 
 For your convenience, some special PostScript paths are already defined, which
 are given in the following table.
