added beginnings of documentation for trafo module
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@365 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -14,6 +14,7 @@ PostScript is a trademark of Adobe Systems Incorporated.
 \include{unit}
 \include{path}
 \include{bpath}
+\include{trafo}
 \include{canvas}
 \include{tex}
 \include{color}
