--- a/manual/path.tex
+++ b/manual/path.tex
@@ -7,7 +7,11 @@ paths, which are one of the main building blocks for the generation of
 drawings. To that end it provides 
 \begin{itemize}
 \item classes (derived from \verb|pathel|) for the primitives \verb|moveto|, \verb|lineto|, etc.
-\item the class \verb|path| (and derivatives thereof) representing an entire PostScript path
+\item the class \verb|path| (and derivatives thereof) representing an
+  entire PostScript path
+\item the class \verb|normpath| (and derivatives thereof) which is a
+  path consisting only of a certain subset of \verb|pathel|s, namely 
+  \verb|moveto|, \verb|lineto|, \verb|curveto| and \verb|closepath|.
 \end{itemize}
 
 \section{Class pathel}
@@ -65,7 +69,7 @@ creation of such a path out of series of \verb|pathel|s. A simple example, which
 looks like:
 \begin{quote}
 \begin{verbatim}
-import pyx
+from pyx import *
 from path import *
 
 p = path(moveto(0, 0), 
@@ -80,16 +84,70 @@ by the \verb|path| class. This range from standard operation like the
 determination of the length of a path via \verb|len(p)|, fetching of
 items using \verb|p[index]| and the possibility to concatenate two
 paths, \verb|p1 + p2|, append further \verb|pathel|s using
-\verb|p.append(pathel)| to more advanced methods, we shall discuss
-now.  The first one is \verb|bbox()|, which returns the bounding box
-of the path, \textit{i.e.} the smallest rectangle enclosing the path,
-as an instance of the class \verb|bbox.bbox|. This is mainly used
-during the output to an EPS file, but it can also be useful for your
+\verb|p.append(pathel)| to more advanced methods, which are summarized
+in the following table.
+
+\medskip
+\begin{tabularx}{\linewidth}{>{\hsize=.7\hsize}X>{\raggedright\arraybackslash\hsize=1.3\hsize}X}
+  \texttt{path} method & Function \\
+  \hline 
+  \texttt{\_\_init\_\_(*pathels)} & construct new \texttt{path}
+  consisting of \texttt{pathels}\\
+  \texttt{append(pathel)} & appends \texttt{pathel} to end of \texttt{path}\\
+  \texttt{bbox()} & returns the bounding box of the \texttt{path}\\
+  \texttt{length(epsilon=1e-5)} & returns the total arc length of the \texttt{path} in
+  PostScript points with accuracy \texttt{epsilon}. \\
+  \texttt{reversed()} & returns the normalized reversed \texttt{path}.\\
+  \texttt{transformed(trafo)} & returns the normalized and accordingly
+  to the linear transformation \texttt{trafo} transformed path. Here,
+  \texttt{trafo} must be an   instance of the \texttt{trafo.trafo} class.
+\end{tabularx}
+\medskip
+
+Some notes on the above:
+\begin{itemize}
+\item The bounding box may be too large, if the path contains any
+  \texttt{curveto} elements, since for these the control box,
+  \textit{i.e.}, the bounding box enclosing the control points of
+  the B\'ezier curve is returned.
+\end{itemize}
+
 own calculations. The second one, \verb|bpath()| converts the path to
 a path consiting of B\'ezier curves and returns an instance of the class
 \verb|bpath.bpath| (cf.\ Sect.~\ref{bpath}), Use this, if you want to
 apply the more sophisticated methods, that are only available for
 B\'ezier paths, like transformations, intersection, dissections, etc.
+
+
+\section{Class normpath}
+
+The \texttt{normpath} class represents a specialized form of a
+\texttt{path}, which only contains the elements \verb|moveto|,
+\verb|lineto|, \verb|curveto| and \verb|closepath|. Any path can
+easily be converted to its normalized form by passing it as parameter
+to the \texttt{normpath} constructor:
+\begin{quote}
+\begin{verbatim}
+np = normpath(p)
+\end{verbatim}
+\end{quote}
+By passing a series of \texttt{pathel}s to the constructor, a
+\texttt{normpath} can be constructed like a generic \texttt{path}.
+Besides the \texttt{path} methods, \texttt{normpath} provides more 
+advanced features like splitting (via \texttt{normpath.split(t)}),
+intersection (via \texttt{normpath.intersect(other))}, etc.
+More details are given in the next table:
+
+\begin{tabularx}{\linewidth}{>{\hsize=.7\hsize}X>{\raggedright\arraybackslash\hsize=1.3\hsize}X}
+  \texttt{normpath} method & Function \\
+  \hline 
+  \texttt{append(pathel)} & appends \texttt{pathel} to end of
+  \texttt{normpath} and ``renormalizes'' it.\\
+  \texttt{split(t)} & returns a tuple consisting of two
+  \texttt{normpath}s corresponding to the \texttt{normpath} split at
+  the parameter value \texttt{t}.
+\end{tabularx}
+
 
 
 \section{Subclasses of path}
@@ -102,7 +160,9 @@ are given in the following table.
 Subclass of \texttt{path} & Function \\
 \hline
 \texttt{line(x1, y1, x2, y2)} & a line from the point
-  (\texttt{x1}, \texttt{y1} to the point (\texttt{x2}, \texttt{y2})\\
+  (\texttt{x1}, \texttt{y1}) to the point (\texttt{x2}, \texttt{y2})\\
+\texttt{curve(x0, y0, x1, y1, x2, y2, x3, y3)} & a B\'ezier curve with 
+control points  (\texttt{x0}, \texttt{y0}), $\dots$, (\texttt{x3}, \texttt{y3}).\\
 \texttt{rect(x, y, w, h)} &  a rectangle with the
   lower left point (\texttt{x}, \texttt{y}), width~\texttt{w}, and
   height~\texttt{h}. \\
