--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -8,7 +8,7 @@
 \author{J\"org Lehmann \texttt{<joergl@users.sourceforge.net>}\and
 Andr\'e Wobst \texttt{<wobsta@users.sourceforge.net>}}
 \maketitle
-PostScript is a trademark of Adobe Systems Incorporated.
+\quad\vfill\centerline{PostScript is a trademark of Adobe Systems Incorporated.}
 \tableofcontents
 \include{intro}
 \include{unit}
@@ -17,6 +17,7 @@ PostScript is a trademark of Adobe Systems Incorporated.
 \include{canvas}
 \include{tex}
 \include{color}
+\include{datafile}
 \include{graph}
 \appendix
 \include{colorname}
