--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -20,5 +20,6 @@ Andr\'e Wobst \texttt{<wobsta@users.sourceforge.net>}}
 \include{datafile}
 \include{graph}
 \appendix
+\include{mathtree}
 \include{colorname}
 \end{document}
