--- a/manual/mathtree.tex
+++ b/manual/mathtree.tex
@@ -3,18 +3,20 @@
 
 At several points within \PyX{} mathematical expressions can be
 provided in form of string parameters. They are evaluated by the
-module mathtree. This module is not described futher in this user
-manual, because it is considered to be a technical detail. We just
-want to give a list of available operators and functions here.
+module \verb|mathtree|. This module is not described futher in this
+user manual, because it is considered to be a technical detail. We
+just give a list of available operators, functions and predefined
+variable names here here.
 
 \begin{description}
 \item[Operators:]
 \verb|+|; \verb|-|; \verb|*|; \verb|/|; \verb|**| and \verb|^| (both
 for power)
-
 \item[Functions:]
 \verb|neg| (negate); \verb|sgn| (signum); \verb|sqrt| (square root);
 \verb|exp|; \verb|log| (natural logarithm); \verb|sin|; \verb|cos|;
 \verb|tan|; \verb|asin|; \verb|acos|; \verb|atan|; \verb|norm|
 ($\sqrt{a^2+b^2}$ as an example for functions with multiple arguments)
+\item[predefined variables:]
+\verb|pi| ($\pi$); \verb|e| ($e$)
 \end{description}
