--- a/manual/path.tex
+++ b/manual/path.tex
@@ -2,7 +2,7 @@
 
 \label{path}
 
-With help of the path module, one is able to construct PostScript like 
+With help of the path module it is possible to construct PostScript like 
 paths, which are one of the main building blocks for the generation of 
 drawings. To that end it provides 
 \begin{itemize}
@@ -10,8 +10,9 @@ drawings. To that end it provides
 \item the class \verb|path| (and derivatives thereof) representing an
   entire PostScript path
 \item the class \verb|normpath| (and derivatives thereof) which is a
-  path consisting only of a certain subset of \verb|pathel|s, namely 
-  \verb|moveto|, \verb|lineto|, \verb|curveto| and \verb|closepath|.
+  path consisting only of a certain subset of \verb|pathel|s, namely
+  the four \verb|normpathel|s \verb|moveto|, \verb|lineto|,
+  \verb|curveto| and \verb|closepath|.
 \end{itemize}
 
 \section{Class pathel}
@@ -87,6 +88,8 @@ paths, \verb|p1 + p2|, append further \verb|pathel|s using
 \verb|p.append(pathel)| to more advanced methods, which are summarized
 in the following table.
 
+XXX terminology: subpath, \dots
+
 \medskip
 \begin{tabularx}{\linewidth}{>{\hsize=.7\hsize}X>{\raggedright\arraybackslash\hsize=1.3\hsize}X}
   \texttt{path} method & Function \\
@@ -94,14 +97,32 @@ in the following table.
   \texttt{\_\_init\_\_(*pathels)} & construct new \texttt{path}
   consisting of \texttt{pathels}\\
   \texttt{append(pathel)} & appends \texttt{pathel} to end of \texttt{path}\\
-  \texttt{arclength(epsilon=1e-5)} & returns the total arc length of all \texttt{path} segments in
-  PostScript points with accuracy \texttt{epsilon}.\\
+  \texttt{arclength(epsilon=1e-5)} & returns the total arc length of
+  all \texttt{path} segments in  PostScript points with accuracy 
+  \texttt{epsilon}.$^\dagger$\\
+  \texttt{at(t)} & returns the coordinates of the point of
+  \texttt{path} corresponding to the parameter value
+  \texttt{t}.$^\dagger$\\
   \texttt{bbox()} & returns the bounding box of the \texttt{path}\\
-  \texttt{reversed()} & returns the normalized reversed \texttt{path}.\\
+  \texttt{begin()} & return first point of first subpath of
+  \texttt{path}.$^\dagger$\\
+  \texttt{end()} & return last point of last subpath of
+  \texttt{path}.$^\dagger$\\
+  \texttt{glue(opath)} & returns the \texttt{path} glued together with
+  \texttt{opath}, \textit{i.e.}\ the last subpath of \texttt{path}
+  and the first one of \texttt{opath} are joined.$^\dagger$\\
+  \texttt{intersect(opath, \newline\phantom{intersect(}epsilon=1e-5)} &
+  returns a list of parameter values (as tuples \texttt{(tself, tother)}) corresponding to the 
+  intersection points of \texttt{path} and \texttt{opath}.$^\dagger$\\
+  \texttt{reversed()} & returns the normalized reversed
+  \texttt{path}.$^\dagger$\\
+  \texttt{split(t)} & returns a tuple consisting of two
+  \texttt{normpath}s corresponding to the \texttt{path} split at
+  the parameter value \texttt{t}.$^\dagger$\\
   \texttt{transformed(trafo)} & returns the normalized and accordingly
   to the linear transformation \texttt{trafo} transformed path. Here,
-  \texttt{trafo} must be an   instance of the \texttt{trafo.trafo} class.
-\end{tabularx}
+  \texttt{trafo} must be an   instance of the \texttt{trafo.trafo} class.$^\dagger$
+\end{tabularx} 
 \medskip
 
 Some notes on the above:
@@ -110,43 +131,36 @@ Some notes on the above:
   \texttt{curveto} elements, since for these the control box,
   \textit{i.e.}, the bounding box enclosing the control points of
   the B\'ezier curve is returned.
+\item The $\dagger$ denotes methods which require a prior
+  conversion of the path into a \verb|normpath| instance. This is
+  done automatically, but if you need many to call such methods often,
+  it is a good idea to do the conversion once for performance reasons.
+\item Instead of using the \verb|glue| method, you can also glue two
+paths together with help of the \verb|<<| opertor, for instance
+\verb|p = p1 << p2|.
 \end{itemize}
 
 \section{Class normpath}
 
 The \texttt{normpath} class represents a specialized form of a
-\texttt{path}, which only contains the elements \verb|moveto|,
-\verb|lineto|, \verb|curveto| and \verb|closepath|. Any path can
+\texttt{path} containing only the elements \verb|moveto|,
+\verb|lineto|, \verb|curveto| and \verb|closepath|. Such normalized
+paths are used during all of the more sophisticated path operations,
+namely precisely those which are denoted by a $\dagger$ in the above table.
+
+
+Any path can
 easily be converted to its normalized form by passing it as parameter
-to the \texttt{normpath} constructor:
+to the \texttt{normpath} constructor,
 \begin{quote}
 \begin{verbatim}
 np = normpath(p)
 \end{verbatim}
 \end{quote}
-By passing a series of \texttt{pathel}s to the constructor, a
+Alternatively, by passing a series of \texttt{pathel}s to the constructor, a
 \texttt{normpath} can be constructed like a generic \texttt{path}.
-Besides the \texttt{path} methods, \texttt{normpath} provides more 
-advanced features like splitting (via \texttt{normpath.split(t)}),
-intersection (via \texttt{normpath.intersect(other))}, etc.
-More details are given in the next table:
-
-\begin{tabularx}{\linewidth}{>{\hsize=.7\hsize}X>{\raggedright\arraybackslash\hsize=1.3\hsize}X}
-  \texttt{normpath} method & Function \\
-  \hline 
-  \texttt{append(pathel)} & appends \texttt{pathel} to end of
-  \texttt{normpath} and ``renormalizes'' it.\\
-  \texttt{at(t)} & returns the coordinates of the point of
-  \texttt{normpath} corresponding to the parameter value \texttt{t}.\\
-  \texttt{intersect(onormpath, \newline\phantom{intersect(}epsilon=1e-5)} &
-  returns a list of parameter values (as tuples \texttt{(tself, tother)}) corresponding to the 
-  intersection points of \texttt{normpath} and \texttt{onormpath}.\\
-  \texttt{split(t)} & returns a tuple consisting of two
-  \texttt{normpath}s corresponding to the \texttt{normpath} split at
-  the parameter value \texttt{t}.
-\end{tabularx}
-
-
+Addition of a \verb|normpath| and a \verb|path| always yields a
+\verb|normpath|.
 
 \section{Subclasses of path}
 
@@ -168,6 +182,12 @@ control points  (\texttt{x0}, \texttt{y0}), $\dots$, (\texttt{x3}, \texttt{y3}).
   center (\texttt{x}, \texttt{y}) and radius~\texttt{r}.
 \end{tabularx}
 \medskip
+Note that besides the \verb|circle| class all classes are actually
+subclasses of \verb|normpath|.
+
+
+\section{Examples}
+
 
 
 %%% Local Variables:
