--- a/manual/path.tex
+++ b/manual/path.tex
@@ -24,7 +24,7 @@ PostScript primitives.
 
 \medskip
 \begin{tabularx}{\linewidth}{>{\hsize=.7\hsize}X>{\raggedright\arraybackslash\hsize=1.3\hsize}X}
-Subclass of \texttt{pathel} & Function \\
+Subclass of \texttt{pathel} & function \\
 \hline
 \texttt{closepath()} & closes current subpath \\
 \texttt{moveto(x, y)} & sets current point to (\texttt{x},
@@ -92,7 +92,7 @@ XXX terminology: subpath, \dots
 
 \medskip
 \begin{tabularx}{\linewidth}{>{\hsize=.7\hsize}X>{\raggedright\arraybackslash\hsize=1.3\hsize}X}
-  \texttt{path} method & Function \\
+  \texttt{path} method & function \\
   \hline 
   \texttt{\_\_init\_\_(*pathels)} & construct new \texttt{path}
   consisting of \texttt{pathels}\\
@@ -169,7 +169,7 @@ are given in the following table.
 
 \medskip
 \begin{tabularx}{\linewidth}{l>{\raggedright\arraybackslash}X}
-Subclass of \texttt{path} & Function \\
+Subclass of \texttt{path} & function \\
 \hline
 \texttt{line(x1, y1, x2, y2)} & a line from the point
   (\texttt{x1}, \texttt{y1}) to the point (\texttt{x2}, \texttt{y2})\\
