--- a/manual/trafo.tex
+++ b/manual/trafo.tex
@@ -38,7 +38,7 @@ table.
 
 \medskip
 \begin{tabularx}{\linewidth}{>{\hsize=.8\hsize}X>{\raggedright\arraybackslash\hsize=1.2\hsize}X}
-\texttt{trafo} method & Function \\
+\texttt{trafo} method & function \\
 \hline
 \texttt{\_\_init\_\_(matrix=((1,0),(0,1)),\newline
 \phantom{\_\_init\_\_(}vector=(0,0)):} & create new \texttt{trafo}
@@ -74,7 +74,7 @@ method. They are listed in the following table:
 
 \medskip
 \begin{tabularx}{\linewidth}{>{\hsize=.7\hsize}X>{\raggedright\arraybackslash\hsize=1.3\hsize}X}
-  \texttt{trafo} subclass & Function \\
+  \texttt{trafo} subclass & function \\
   \hline 
   \texttt{mirroring(angle)} & mirroring at line through $(0,0)$
   with direction  \texttt{angle} in degrees.\\
