--- a/manual/unit.tex
+++ b/manual/unit.tex
@@ -91,7 +91,7 @@ can use the predefined conversion functions which are given in the
 following table
 \begin{center}
 \begin{tabular}{ll}
-Function & result \\
+function & result \\
 \hline
 \texttt{to\_m(l)} & \texttt{l} in units of m\\
 \texttt{to\_cm(l)} & \texttt{l} in units of cm\\
